<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/image_profil"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icone_vide" />

    <TextView
        android:id="@+id/nom_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/nom_profil"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profil" />

    <ImageView
        android:id="@+id/icone_adresse"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom_profil"
        app:srcCompat="@drawable/icone_adresse" />

    <ImageView
        android:id="@+id/icone_mail"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icone_adresse"
        app:srcCompat="@drawable/icone_mail" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icone_mail"
        app:srcCompat="@drawable/icone_tel" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:srcCompat="@drawable/icone_calendrier" />

    <TextView
        android:id="@+id/adresse_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/adresse_profil"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icone_adresse"
        app:layout_constraintStart_toEndOf="@+id/icone_adresse"
        app:layout_constraintTop_toTopOf="@+id/icone_adresse" />

    <TextView
        android:id="@+id/mail_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/mail_profil"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icone_mail"
        app:layout_constraintStart_toEndOf="@+id/icone_mail"
        app:layout_constraintTop_toTopOf="@+id/icone_mail" />

    <TextView
        android:id="@+id/tel_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/tel_profil"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

    <TextView
        android:id="@+id/date_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/date_profil"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/ville_profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/ville_profil"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/icone_adresse"
        app:layout_constraintStart_toEndOf="@+id/icone_adresse" />
</androidx.constraintlayout.widget.ConstraintLayout>